[package]
name = "img2avif"
version = "0.1.0"
edition = "2024"

[dependencies]
imagepipe = "0.5"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp", "bmp", "tiff", "gif"] }
ravif = "0.13"
imgref = "1"
rgb = "0.8"
roxmltree = "0.21"
clap = { version = "4", features = ["derive"] }
rayon = "1"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
