[package]
name = "avify"
version = "0.2.0"
edition = "2024"
description = "Batch convert images to AVIF — supports RAW, HEIC/HEIF, and standard formats with parallel encoding"
license = "MIT"
repository = "https://github.com/mrgnw/img2avif"
keywords = ["avif", "image", "converter", "raw", "heic"]
categories = ["command-line-utilities", "multimedia::images"]
readme = "README.md"

[features]
default = ["heic"]
heic = ["dep:libheif-rs"]

[dependencies]
imagepipe = "0.5"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp", "bmp", "tiff", "gif", "tga"] }
ravif = "0.13"
imgref = "1"
rgb = "0.8"
roxmltree = "0.21"
clap = { version = "4", features = ["derive"] }
rayon = "1"
anyhow = "1"
libheif-rs = { version = "2.7", optional = true }
jxl-oxide = { version = "0.12.5", default-features = false }
psd = "0.3.5"

[profile.dev.package.rav1e]
opt-level = 3

[profile.dev.package.ravif]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
strip = true
